Hot fix tweaks to the results page styling as class name was missing

--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -921,23 +921,23 @@ padding-right:10px;
 
 
 
-.testflow label{
+.resultsforms label{
 line-height:35px;
 margin-top:0px;
 margin-bottom:0px;
 }
 
 
-.testflow .pe-2 label{
+.resultsforms .pe-2 label{
 font-weight:bold;
 }
 
 
-.testflow .pe-2{
+.resultsforms .pe-2{
 align-self: flex-start;
 }
 
-.testflow .row{
+.resultsforms .row{
 margin-bottom:30px;
 }
 
