--- a/app/views/culture_results/new.haml
+++ b/app/views/culture_results/new.haml
@@ -5,7 +5,7 @@
         = image_tag "arrow-left-white.png"
       Culture Test Results
       
-#new-culture-result.testflow
+#new-culture-result.testflow.resultsforms
   .container
     .row.labelHeader
       .col-6
