--- a/app/views/dst_lpa_results/new.haml
+++ b/app/views/dst_lpa_results/new.haml
@@ -5,7 +5,7 @@
         = image_tag "arrow-left-white.png"
       = I18n.t('dst_lpa_results.new.header')
 
-#dst-lpa-results.testflow
+#dst-lpa-results.testflow.resultsforms
   .container
     .row.labelHeader
       .col-6
