--- a/app/views/microscopy_results/new.haml
+++ b/app/views/microscopy_results/new.haml
@@ -5,7 +5,7 @@
         = image_tag "arrow-left-white.png"
       Microscopy Test Results
 
-#microscopy-results.testflow
+#microscopy-results.testflow.resultsforms
   .container
     .row.labelHeader
       .col-6
