--- a/app/views/patient_logs/show.haml
+++ b/app/views/patient_logs/show.haml
@@ -32,8 +32,12 @@
             .row
               .col-12
                 %label
+                - if @patient_log.comment != ""
                   = AuditLog.human_attribute_name(:comment)
-                %a{:href => "/encounters/=@patient_log.comment"} Click here to view the test order.
+                - if @patient_log.title == "New Test Order Created"
+                  %a{:href => "/encounters/#{@patient_log.comment}"} Click here to view the test order.
+                - else
+                  = @patient_log.comment
 				
           .col-6
             .panel.patient-details
