--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -992,3 +992,10 @@ border-radius:0px;
 form#filters-form.filteroptions #clear_button:hover{
 background:#478BC9;
 }
+
+
+.audit_presenter{
+padding:10px;
+padding-left:15px;
+text-transform: capitalize;
+}
