--- a/app/views/patients/_form.html.haml
+++ b/app/views/patients/_form.html.haml
@@ -12,7 +12,7 @@
 
   = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
 
-  .row
+  .row.nickname
     .col.pe-2
       = f.label :nickname
     .col
@@ -35,7 +35,10 @@
       = f.label :birth_date_on
     .col
       = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
+  .row
+    .col.pe-2
       = f.label 'Estimate Age'
+    .col
       = f.text_field 'age', :class=>'input-large'
       %script
         $('#patient_age').on('blur', function(){
@@ -46,9 +49,12 @@
         $('#patient_birth_date_on_2i').val(new Date().getMonth());
         $('#patient_birth_date_on_3i').val(new Date().getDate());
         });
-
+  
+  - count = 0
   = f.fields_for :addresses do |addresses_form|
-    = render partial: 'addresses/form', locals: { address_form: addresses_form }
+    - count = count + 1
+    %div{:class => "add#{count}"}
+      = render partial: 'addresses/form', locals: { address_form: addresses_form }
 
   .row
     .col.pe-2
