--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,7 @@
 
       %footer
         = render "shared/footer"
-:javascript
-  I18n.locale = I18n.locale = "#{params[:language].present? ? params[:language].to_sym : :en}"
+      :javascript
+        I18n.default_locale = "#{I18n.default_locale}"
+        I18n.locale = "#{params[:language].present? ? params[:language].to_sym : I18n.locale}"
 
