Update Test Order search.

--- a/app/views/test_orders/index.haml
+++ b/app/views/test_orders/index.haml
@@ -28,7 +28,7 @@
           .filter
             %label.block
               = I18n.t('test_orders.filters.test_order_id')
-            %input{type: "text", name: "encounter.id", value: params["encounter.id"]}
+            %input{type: "text", name: "encounter_id", value: params["encounter_id"]}
 
 
 .row.paginationHeader
