--- a/app/views/alert_messages/index.html.haml
+++ b/app/views/alert_messages/index.html.haml
@@ -2,7 +2,7 @@
   .row.center.add-new.collapse.settings
     .col.pe-10
       %h2
-        Alert messages
+        = I18n.t('alert_messages.index.title')
 
 .row.paginationHeader
   .small-12.columns.box
