--- a/app/views/comments/new.haml
+++ b/app/views/comments/new.haml
@@ -11,6 +11,6 @@
       .small-12.columns.box
         %header
           %h3
-            Comment Details
+            = I18n.t('comments.new.comment_detail')
         .box-content
           = render 'form'
