--- a/app/views/alerts/_filters.html.haml
+++ b/app/views/alerts/_filters.html.haml
@@ -6,8 +6,8 @@
         .col
           %h1
             - if @can_create
-              = link_to "+", new_alert_path, class: 'btn-add side-link fix', title: 'Add Alert'
-              Alert groups
+              = link_to "+", new_alert_path, class: 'btn-add side-link fix', title: I18n.t('alerts.filters.btn_add_alert')
+              = I18n.t('alerts.filters.alert_group')
               
       %form#filters-form{action: alerts_path, "data-auto-submit" => true}
         %input{type: "hidden", name: "page_size", value: @page_size}
