--- a/app/views/api_tokens/index.html.haml
+++ b/app/views/api_tokens/index.html.haml
@@ -4,26 +4,28 @@
       .row
         .col
           %h1
-            = link_to "+", new_api_token_path, class: 'btn-add side-link fix', title: 'Add API Token'
-            API tokens
+            = link_to "+", new_api_token_path, class: 'btn-add side-link fix', title: I18n.t('api_tokens.index.btn_add_api_token')
+            = I18n.t('api_tokens.index.lbl_api_token')
 
 .row
   .col
     - if @api_tokens.empty?
-      = empty_data title: 'No API tokens' do |c|
+      = empty_data title: I18n.t('api_tokens.index.no_api_token') do |c|
         - c.body do
-          %h1 There are no api tokens
+          %h1
+            = I18n.t('api_tokens.index.no_api_token_msg')
     - else
-      = cdx_table title: pluralize(@api_tokens.count, "API token") do |t|
+      = cdx_table title: I18n.t('api_tokens.index.api_token', count: @api_tokens.count) do |t|
         - t.columns do
           %col{:width => "90%"}
           %col{:width => "10%"}
         - t.thead do
           %tr
-            %th Token
+            %th
+              = I18n.t('api_tokens.index.token')
             %th
         - t.tbody do
           - @api_tokens.each do |token|
             %tr
               %td= token.token
-              %td= link_to "Delete", api_token_path(token.id), method: :delete, data: {confirm: "Are you sure you want to delete the following token?\n#{token.token}"}
+              %td= link_to I18n.t('api_tokens.index.lnk_delete'), api_token_path(token.id), method: :delete, data: {confirm: "#{I18n.t('api_tokens.index.delete_msg')}\n#{token.token}"}
