Add missing variable to localisation.

--- a/app/views/test_orders/index.haml
+++ b/app/views/test_orders/index.haml
@@ -3,7 +3,7 @@
   .filterbar.filterbartest
     .heading
       .title
-        Tests
+        = I18n.t('test_orders.index.header')
     .topfilteropt
       %input#query_button.btn-primary.filtershow(type='button' value="#{I18n.t('test_orders.filters.show_filters')}")
 
