Fix 404 error when clicking on xpert, culture results.

--- a/app/views/culture_results/_form.haml
+++ b/app/views/culture_results/_form.haml
@@ -36,7 +36,7 @@
         = I18n.t('select.microscopy.test_result_options.3plus')
       = f.radio_button :test_result, 'ntp'
       %label{for: 'culture_result_test_result_ntp'}
-        = I18n.t('select.culture.test_result_options.ntp')
+        = I18n.t('select.culture.test_result_options.ntm')
       = f.radio_button :test_result, 'contaminated'
       %label{for: 'culture_result_test_result_contaminated'}
         = I18n.t('select.culture.test_result_options.contaminated')
