--- a/app/views/microscopy_results/new.haml
+++ b/app/views/microscopy_results/new.haml
@@ -1,9 +1,9 @@
 .row.center.add-new.collapse
   .col.pe-10
     %h2
-      = link_to encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'side-link', title: 'Back' do
+      = link_to encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'side-link', title: I18n.t('microscopy_results.new.back') do
         = image_tag "arrow-left-white.png"
-      Microscopy Test Results
+      = I18n.t('microscopy_results.new.title')
 
 #microscopy-results.testflow.resultsforms
   .container
