--- a/app/views/policies/new.html.haml
+++ b/app/views/policies/new.html.haml
@@ -6,6 +6,6 @@
           %h2
             = link_to policies_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left-white.png"
-            New Policy
+            = I18n.t('policies.new.new_policy')
 
 = render 'form'
