--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,7 +2,7 @@
   .row.labelHeader 
     .col-6
       %h3
-        User Details
+        = I18n.t('users.form.user_details_header')
     .col-6
   .panel.box-content
     .row
