--- a/app/views/xpert_results/new.haml
+++ b/app/views/xpert_results/new.haml
@@ -9,6 +9,6 @@
     .small-12.columns
       %header
         %h3 
-          Details
+          = I18n.t('xpert_results.new.details_header')
       .box-content
         = render 'form'
