--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -2,9 +2,11 @@
   .col
     %table.table
       %tr
-        %th.tableheader{colspan:100} Locations
+        %th.tableheader{colspan:100}
+          = I18n.t('locations.index.tbl_header')
       %tr
-        %th Name
+        %th
+          = I18n.t('locations.index.col_name')
       - @locations.each do |location|
         %tr
           %td= link_to location.name, locations_path(parent_id: location.id)
