--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -3,10 +3,12 @@
 %h3 #{@location.name}
 - if @location.parent
   %p
-    %b Parent:
+    %b
+      = I18n.t('locations.show.col_name')
     = @location.parent.name
 %p
-  %b Admin level:
+  %b
+    = I18n.t('locations.show.admin')
   = "#{@location.type} (#{@location.admin_level})"
 
 
