--- a/app/views/sites/_side.html.haml
+++ b/app/views/sites/_side.html.haml
@@ -1,24 +1,28 @@
 .row
   .col.pe-2
-    %label Creation date
+    %label 
+      = I18n.t('sites.side.creation_date') 
   .col
     .value= @localization_helper.format_datetime(@site.created_at)
 - if has_access_to_devices_index?
   .row
     .col.pe-2
-      %label Devices
+      %label 
+        = I18n.t('sites.side.devices') 
     .col
       .value= link_to @site.devices.count, devices_path(context: @site.uuid)
 - if has_access_to_test_results_index?
   .row
     .col.pe-2
-      %label Tests
+      %label 
+        = I18n.t('sites.side.tests') 
     .col
       .value= link_to @site.test_results.count, test_results_path(context: @site.uuid)
 - if has_access_to_users_index?
   .row
     .col.pe-2
-      %label Users
+      %label 
+        = I18n.t('sites.side.users') 
     .col
       .value= link_to User.within(@site).count, users_path(context: @site.uuid)
 
