--- a/app/views/test_results/index.haml
+++ b/app/views/test_results/index.haml
@@ -1,14 +1,14 @@
 .testflow
   = bettertabs :test_results_tabs, :selected_tab => @selected_tab do |tab|
-    = tab.link :devices do
+    = tab.link :devices, I18n.t('test_results.index.tab_device') do
       = render :partial => 'device_results'
-    = tab.link :microscopy do
+    = tab.link :microscopy, I18n.t('test_results.index.tab_microscopy') do
       = render :partial => 'microscopy_results'
-    = tab.link :xpert do
+    = tab.link :xpert, I18n.t('test_results.index.tab_xpert') do
       = render :partial => 'xpert_results'
-    = tab.link :culture do
+    = tab.link :culture, I18n.t('test_results.index.tab_culture') do
       = render :partial => 'culture_results'
-    = tab.link :dst_lpa do
+    = tab.link :dst_lpa, I18n.t('test_results.index.tab_dst_lpa') do
       = render :partial => 'dst_lpa_results'
 
 :javascript
