--- a/app/views/users/no_data_allowed.haml
+++ b/app/views/users/no_data_allowed.haml
@@ -4,9 +4,10 @@
       .row
         .col
           %h1
-            Users
+            = I18n.t('users.no_data_allowed.users_header')
 .row
   .col
     = empty_data icon: 'icon-outline-user xx-large' do |c|
       - c.body do
-        %h1 You have no access to users of the selected institution.
+        %h1 
+          = I18n.t('users.no_data_allowed.no_access')
